--- a/style/scss/_mixin.scss
+++ b/style/scss/_mixin.scss
@@ -39,6 +39,11 @@
     justify-content: center;
     align-items: center;
 }
+@mixin df($ju , $ai){
+    display: flex;
+    justify-content: $ju;
+    align-items: $ai;
+}
 @mixin absolute($top , $right , $bottom , $left){
     position : absolute;
     top : $top;
@@ -64,8 +69,4 @@
     overflow-x: $x;
     overflow-y: $y;
     -webkit-overflow-scrolling: touch;
-}
-
-.aaa{
-    @include aniHandler();
 }
